--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,13 +20,12 @@ body {
     height: 450px;
     background: #fcfbfb;
     border: 1px solid #e7e7e7;
-
     background: #eef3f7;
     /* width: 410px; */
     min-height: 270px;
     box-shadow: 0px 15px 35px -5px rgb(50 88 130 / 32%);
     border-radius: 15px;
-    padding: 22px;
+    padding: 12px;
     height: 42vw;
     max-height: 450px;
     margin: 10px;
@@ -88,7 +87,7 @@ section.playlist::-webkit-scrollbar-thumb {
     border-radius: 8px;
     border: 4px solid transparent;
     background-clip: content-box;
-    background-color: #bfbfbf;
+    background-color: #a3b3ce;
 }
 
 .player-video{
@@ -101,17 +100,17 @@ section.playlist::-webkit-scrollbar-thumb {
 
 
 .player-control{
-display: flex;
-flex-direction: column;
-padding: 0px 8px;
-height: 20%;
-}
+    display: flex;
+    flex-direction: column;
+    padding: 0px 8px;
+    height: 20%;
+    }
 
-.player-control .progress{
-display: flex;
-justify-content: space-between;
-align-items: center;
-/*padding-bottom: 10px;*/
+    .player-control .progress{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /*padding-bottom: 10px;*/
 }
 
 
@@ -238,7 +237,7 @@ align-items: center;
 
 .playback-btns > .btn#play{
     /*opacity: 0.75;*/
-    border: 3px solid #acb8cc;
+    //border: 3px solid #acb8cc;
     padding: 10px 9px;
 }
 
@@ -280,6 +279,10 @@ align-items: center;
     /*background-color: #111415;*/
     transition: background-color 500ms linear;
     text-align: center;
+    font-size: 0.9rem;
+
+    height: 6vw;
+    max-height: 50px;
 }
 
 .playlist .video-list .playlist-item:not(:first-child){
@@ -290,14 +293,10 @@ align-items: center;
     background-color: #ececec;
     border-radius: 2%;
     box-shadow: 0px 0px 28px -12px rgba(30,100,190,0.20);
-
-
     background: #f8f7f7fc;
     border-radius: 10px;
     opacity: 1;
-
     background: #f8f7f7fc;
-    opacity: 1;
     /*transform: scale(1.04);*/
     /*color: #532ab9;*/
     box-shadow: 0px 5px 10px 0px rgb(76 70 124 / 20%);
@@ -310,6 +309,9 @@ align-items: center;
     border: 1px solid #e3e3e3;
     filter: blur(1px);
     min-width: 76px;
+    width: 6.8vw;
+    max-width: 90px;
+
 }
 
 .playlist .video-list .playlist-item .play{
